Use darktext for inverted

--- a/src/chrome/browser/browser.css
+++ b/src/chrome/browser/browser.css
@@ -1580,7 +1580,7 @@ toolbarbutton[type="socialmark"] > .toolbarbutton-icon {
   list-style-image: url("chrome://browser/skin/toolbarbutton-dropdown-arrow-inverted.png");
 }
 
-#alltabs-button:-moz-lwtheme-brighttext {
+#alltabs-button:-moz-lwtheme-darktext {
   list-style-image: url("chrome://browser/skin/tabbrowser/alltabs-inverted.png");
 }
 
