--- a/src/chrome/mozapps/extensions/extensions.css
+++ b/src/chrome/mozapps/extensions/extensions.css
@@ -337,6 +337,7 @@
   margin: 0 6px;
   min-width: 12px !important;
   -moz-box-direction: reverse;
+  box-shadow: none !important;
 }
 
 .sorter .button-box {
@@ -346,6 +347,7 @@
 
 .sorter[checkState="1"] {
   list-style-image: url("chrome://global/skin/arrow/arrow-dn.gif");
+  background-color: rgb(110,110,110) !important;
 }
 
 .sorter[checkState="2"] {
