Brighten menulist-editable-input text

--- a/src/chrome/global/menulist.css
+++ b/src/chrome/global/menulist.css
@@ -114,6 +114,7 @@ html|*.menulist-editable-input {
   padding: 0px !important;
   background: inherit;
   font: inherit;
+  color: #fff;
 }
 
 /* ::::: compact menulists ::::: */
