--- a/src/chrome/global/global.css
+++ b/src/chrome/global/global.css
@@ -86,17 +86,17 @@ iframe {
 /* ::::: statusbar ::::: */
 
 statusbar {
-  -moz-appearance: statusbar;
+  -moz-appearance: none;
   border-top: 1px solid rgb(50,50,50);
   border-left: 1px solid rgb(50,50,50);
   border-right: 1px solid rgb(50,50,50);
   border-bottom: 1px solid rgb(50,50,50);
-  background-color: #F7F7F7;
+  background-color: rgb(43,43,43);
   min-height: 22px;
 }
 
 statusbarpanel {
-  -moz-appearance: statusbarpanel;
+  -moz-appearance: none;
   -moz-box-align: center;
   -moz-box-pack: center;
   border-left: 1px solid rgb(50,50,50);
