--- a/src/chrome/global/about.css
+++ b/src/chrome/global/about.css
@@ -22,19 +22,13 @@ body {
 }
 
 #aboutLogoContainer {
-  border: 1px solid rgb(50,50,50);
+  margin: 0 auto;
   width: 300px;
   margin-bottom: 2em;
 }
 
 img {
   border: 0;
-}
-
-#version {
-  font-weight: bold;
-  color: #909090;
-  margin: -24px 0 9px 17px;
 }
 
 ul {
