--- a/src/chrome/browser/browser.css
+++ b/src/chrome/browser/browser.css
@@ -83,7 +83,7 @@
   border-top: none !important;
   font-weight: bold;
   box-shadow: none !important;
-  padding: 0 .8em .05em;
+  padding: 0 1.5em .05em;
   margin: 0 0 2px;
   color: #fff;
 }
