--- a/src/chrome/global/notification.css
+++ b/src/chrome/global/notification.css
@@ -30,15 +30,15 @@ notification[type="critical"] {
 /* Default icons for notifications */
 
 .messageImage[type="info"] {
-  list-style-image: url("chrome://global/skin/icons/information-16.png");
+  list-style-image: url("chrome://global/skin/icons/information-16.svg");
 }
 
 .messageImage[type="warning"] {
-  list-style-image: url("chrome://global/skin/icons/warning-16.png");
+  list-style-image: url("chrome://global/skin/icons/warning-16.svg");
 }
 
 .messageImage[type="critical"] {
-  list-style-image: url("chrome://global/skin/icons/error-16.png");
+  list-style-image: url("chrome://global/skin/icons/error-16.svg");
 }
 
 .messageCloseButton {
