Improve statusbar options window appearance

--- a/src/chrome/browser/statusbar/prefs.css
+++ b/src/chrome/browser/statusbar/prefs.css
@@ -11,7 +11,7 @@
 
 radio[pane="status4evar-pane-status"]
 {
-	list-style-image: url("chrome://global/skin/icons/information-32.png");
+	list-style-image: url("chrome://global/skin/icons/information-16.svg");
 }
 
 radio[pane="status4evar-pane-progress"]
@@ -26,7 +26,7 @@ radio[pane="status4evar-pane-download"]
 
 radio[pane="status4evar-pane-addonbar"]
 {
-	list-style-image: url("chrome://mozapps/skin/extensions/extensionGeneric.png");
+	list-style-image: url("chrome://mozapps/skin/extensions/addons.svg#extensions");
 }
 
 radio[pane="status4evar-pane-advanced"]
